# CRS.ZarrPipelines

./: .env.example  .gitignore  Dockerfile  README.md  job_entrypoint.py  main.py  prefect.yaml  pyproject.toml
app/: run_pipeline.py
app/api/: main.py
app/api/routers/: aggregation.py  pipeline.py  scoring.py
app/config/: README.md  hazards.json  pipeline.yaml  scoring.json  scoring.yaml
app/domain/: __init__.py  combine.py  gadm_aggregations.py  pipeline.py  scoring.py
app/domain/special/: __init__.py  cf.py  ls.py  rf.py  wf.py
app/flows/: pipeline_flow.py
app/scripts/: convert_gadm.py  inspect_GADM.ipynb  requirements-gadm.txt  run_convert_gadm.ipynb  special_LS.ipynb  special_WF.ipynb  standard_hazard.ipynb
app/scripts/smoke-tests/: level0.ipynb  level1.ipynb  level2.ipynb  level3.ipynb  level4.ipynb
app/utils/: __init__.py  compute.py  job_store.py  pipeline_config.py  scoring_config.py
tests/: test_combine.py  test_scoring.py  test_scoring_config.py
